--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
-flask 
-flask_limiter
-gunicorn
-pytube
+Click==7.0
+Flask==1.0.2
+Flask-Limiter==1.0.1
+gunicorn==19.9.0
+itsdangerous==1.1.0
+Jinja2==2.10
+limits==1.3
+MarkupSafe==1.1.0
+pytube==9.3.5
+six==1.11.0
+Werkzeug==0.14.1
